# bricscad-version-checker

./: .gitignore  LICENSE  Pipfile  build.py  main.py  pyproject.toml  readme.md
bricscad_version_checker/: build.py  main.py
