[tool.poetry]
authors = ["Hannes Wörn <hannes@woern.de>"]
description = ""
name = "bricscad-version-checker"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
pyinstaller = "^6.3.0"
python = ">=3.11,<3.13"
requests = "^2.31.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
